software/host/namespace.yaml
#
# beholder Namespace and host side configuration
#
apiVersion: v1
kind: Namespace
metadata:
  name: beholder
